// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form panel test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel__header"
  >
    Form
  </div>
  <div
    class="jsde-panel-body"
  >
    <mock-form />
  </div>
</div>
`;

exports[`Form panel with title test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel__header"
  >
    Form title
  </div>
  <div
    class="jsde-panel-body"
  >
    <mock-form />
  </div>
</div>
`;

exports[`Table panel test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel__header"
  >
    Table
  </div>
  <div
    class="jsde-panel-body"
  >
    <mock-table />
  </div>
</div>
`;

exports[`Table panel with title test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel__header"
  >
    Table title
  </div>
  <div
    class="jsde-panel-body"
  >
    <mock-table />
  </div>
</div>
`;
